corrected wrapping on mobile

--- a/style.scss
+++ b/style.scss
@@ -227,6 +227,7 @@ nav {
   font-family: $helveticaNeue;
   font-size: 17px;
   margin: 15px 0px 15px; 
+  flex-wrap: wrap;
 
   @include mobile {
     float: none;
